examples/tests/invalid/resource_access_field_as_method.w
resource ff {
    name: str;
    init() {
    }
}

let y = new ff();
y.name();